Add presentation for class 2
Signed-off-by: Esteban Zamora <esteban.zamora.al@gmail.com>

--- a/presentations/clase1/clase1.ipynb
+++ b/presentations/clase1/clase1.ipynb
@@ -266,8 +266,8 @@
     "    - Flujo de actividades\n",
     "    - Dominio de aplicación\n",
     "- Personas >> Programas\n",
-    "    - Cultura organizacional\n",
-    "    - Interacciones humanas"
+    "    - Interacciones humanas\n",
+    "    - Cultura organizacional"
    ]
   },
   {
