Add presentation for class 3
Signed-off-by: Esteban Zamora <esteban.zamora.al@gmail.com>

--- a/presentations/clase2/clase2.ipynb
+++ b/presentations/clase2/clase2.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31a5059a",
+   "id": "42b96263",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78d2f2f2",
+   "id": "6e6a7a5b",
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98a1c1ea",
+   "id": "10b3efbe",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f109b896",
+   "id": "62046049",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -787,7 +787,7 @@
    "source": [
     "#### Planeamiento a largo plazo en Agile\n",
     "Quiz 2:\n",
-    "- Tensión entre agile y largo plazo, pasos\n",
+    "- Agile vs largo plazo\n",
     "- Leer [artículo](https://www.atlassian.com/agile/agile-at-scale/long-term-agile-planning)"
    ]
   },
