Add Python threading events example
Signed-off-by: Esteban Zamora <esteban.zamora.al@gmail.com>

--- a/presentations/clase8/clase8.ipynb
+++ b/presentations/clase8/clase8.ipynb
@@ -177,7 +177,7 @@
     "import operator\n",
     "from typing import Callable\n",
     "\n",
-    "def op_higher_order_func(bop_func: Callable, a, b, c=1):\n",
+    "def op_higher_order_func(op_func: Callable, a, b, c=1):\n",
     "    return c * op_func(a, b)\n",
     "\n",
     "r = op_higher_order_func(operator.add, 1, 2)\n",
@@ -350,7 +350,7 @@
     }
    },
    "source": [
-    "CRUD: Create, Re\n",
+    "CRUD: Create, Read, Update, Delete\n",
     "![crud](img/crud.jpg)"
    ]
   },
@@ -391,7 +391,7 @@
    "source": [
     "### Arquitectura REST\n",
     "- Define un conjunto de restricciones para promover requerimientos no funcionales como:\n",
-    "    - Rendimiento, Escalabilidad, Simpicidad y Confiabilidad\n",
+    "    - Rendimiento, Escalabilidad, Simplicidad y Confiabilidad\n",
     "- Restricciones\n",
     "    - `Stateless`: El servidor debe no mantener estado entre \"requests\" de un cliente.\n",
     "    - `Client-server`: El cliente y el servidor deben ser componentes independientes y desacoplados.\n",
