Minor fix for class 15
Signed-off-by: Esteban Zamora <esteban.zamora.al@gmail.com>

--- a/presentations/clase15/clase15.ipynb
+++ b/presentations/clase15/clase15.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "de2a7914",
+   "id": "fe5ab992",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a92edac",
+   "id": "46bd953e",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "803c5bd1",
+   "id": "5a8292f4",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94587ed5",
+   "id": "83d1f67f",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56e1ca09",
+   "id": "a13d7d97",
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -72,13 +72,14 @@
     "   - `gdb --args <executable>`\n",
     "   - Ej: `gdb --args ./tools/sensor_cmds/sensor_cmds -c ../config/sensors_cfg.json`\n",
     "- Correr gdb TUI (Text User Interface)\n",
-    "    - Manual)[https://sourceware.org/gdb/onlinedocs/gdb/TUI.html]\n",
-    "    - \n"
+    "    - gdb -tui\n",
+    "    - Correr gdb normal y entrar con `C-x C-a`\n",
+    "    - [Manual TUI](https://sourceware.org/gdb/onlinedocs/gdb/TUI.html)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "81a53794",
+   "id": "3bcf85fe",
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "418c4f0a",
+   "id": "f032a519",
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa4fdc5b",
+   "id": "fb389492",
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a07ca121",
+   "id": "cc1a862b",
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c6a9d1e",
+   "id": "4a36c1bb",
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61f1eec2",
+   "id": "7668de2b",
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "906faa38",
+   "id": "e0139869",
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f48e076c",
+   "id": "40f61c3e",
    "metadata": {
     "cell_style": "center",
     "slideshow": {
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dcd2ccc",
+   "id": "7ee8d189",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c76eabb",
+   "id": "56c44c24",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eaf599b",
+   "id": "e3c08d72",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f759ae0c",
+   "id": "0cacf33b",
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0ea7294",
+   "id": "e6db8514",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -332,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fe0e3db",
+   "id": "62dce6ab",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -352,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9357a9b1",
+   "id": "f8a9bf6c",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
