Minor improvement for class 15 gdb exercise
Signed-off-by: Esteban Zamora <esteban.zamora.al@gmail.com>

--- a/presentations/clase15/clase15.ipynb
+++ b/presentations/clase15/clase15.ipynb
@@ -240,12 +240,11 @@
    "source": [
     "### Práctica GDB\n",
     "#### Ejercicio 1 (sensor commands)\n",
+    "Nota: Saltar a GDB TUI con `C-x C-a` en cualquier momento para ver la ubicación en el código.\n",
+    "- Construir ejemplo de `C sensor_commands` según `README.md`\n",
+    "- Ir a la carpeta build del proyecto\n",
     "- `gdb --args ./tools/sensor_cmds/sensor_cmds -c ../config/sensors_cfg.json`\n",
-    "- `start`\n",
-    "- `br ssr_read_cmd_exec_fn`\n",
-    "- `continue`\n",
-    "- step (s) hasta llegar a sensor read\n",
-    "- next (n) hasta llegar a `return state->value`"
+    "- `start`"
    ]
   },
   {
@@ -258,16 +257,15 @@
     }
    },
    "source": [
+    "- `br ssr_read_cmd_exec_fn`\n",
+    "- `continue`\n",
+    "- step (s) hasta entrar a `level_sensor_read`\n",
+    "- next (n) hasta llegar a `return state->value`\n",
     "- `print *info`\n",
     "- `print *state`\n",
     "- `bt`\n",
-    "- `frame 2`\n",
-    "- `print *ssr`\n",
-    "- `frame 4`\n",
-    "- `print *cmd_runner`\n",
-    "- `print *cmd`       \n",
-    "- `frame 0`\n",
-    "- `disassemble level_sensor_read`"
+    "- `frame 2` (saltar a ssr_read_cmd_exec_fn)\n",
+    "- `print *ssr`"
    ]
   },
   {
@@ -280,15 +278,17 @@
     }
    },
    "source": [
+    "- `frame 4` (saltar a cmd_runner_consumer)\n",
+    "- `print *cmd_runner`\n",
+    "- `print *cmd`       \n",
+    "- `frame 0` (saltar a level_sensor_read)\n",
+    "- `disassemble level_sensor_read`\n",
     "- `print reg`\n",
     "- `thread apply all bt`\n",
-    "- Saltar al thread de main\n",
-    "  - `thread 1`\n",
+    "- `thread 1` (saltar al thread de main)\n",
     "- `bt`\n",
-    "- `frame 1`\n",
-    "- `print *cmd_runner`\n",
-    "- `frame 2`\n",
-    "- `print commands`"
+    "- `frame 1` (saltar a command_runner_stop)\n",
+    "- `print *cmd_runner`"
    ]
   },
   {
@@ -301,10 +301,13 @@
     }
    },
    "source": [
+    "- `frame 2` (saltar a sensor_command_experiment)\n",
+    "- `print commands`\n",
     "- Revisar sensor dentro del comando 2\n",
     "  - `p *(((struct ssr_read_cmd_data *)(commands[1]->data))->ssr)`\n",
-    "- Saltar al thread de command runner otra vez\n",
-    "  - `thread 2`\n",
+    "- `info threads`\n",
+    "- `thread 2` o `thread 3`\n",
+    "   - Regresar al thread de command runner\n",
     "- `bt`\n",
     "- `delete br`\n",
     "- `continue`"
@@ -324,8 +327,9 @@
     "- Reconstruir sensor_commands\n",
     "- `gdb --args ./tools/sensor_cmds/sensor_cmds -c ../config/sensors_cfg.json`\n",
     "- `start`\n",
+    "- `continue`\n",
     "- `bt`\n",
-    "- `frame 1`\n",
+    "- `frame 1` (saltar a command_execute)\n",
     "- `print *cmd`\n",
     "- `disassemble`\n",
     "- `info reg`"
@@ -346,7 +350,8 @@
     "- `gdb --args ./tools/sensor_cmds/sensor_cmds -c ../config/sensors_cfg.json`\n",
     "  - `start`\n",
     "  - `br sensor_command_experiment`\n",
-    "  - next hasta inicializar commands (linea 77)\n",
+    "  - `next` (hasta inicializar commands, linea 78)\n",
+    "      - Alternativamente `until 78`\n",
     "  - `watch commands[2]`\n",
     "  - `continue`\n"
    ]
